--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                 <h1>Eu Sou <strong>Otávio Santiago</strong></h1>
                 <p>Software Enginner.. PHP | Java | Python | HTML5 | CSS3 | Javascript</p>
-                <button>Contrate-me</button>
+                <button onclick="javascript:location.href='https:\/\/api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage'">Contrate-me</button>
             </div>
             <div class="img">
 
