--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
 
         <section class="about">
-            <h2>Sobre</h2>
+            <h2>Sobre Mim</h2>
             <p>Sou um <strong>Desenvolvedor de Software</strong>, adoro aprender novas <strong>Tecnologias e Linguagens</strong>, até o momento trabalhei apenas em projetos pessoais, estou ansioso pelo meu primeiro trabalho na area, para finalmente conseguir entrar no mercado de trabalho.</p>
         </section>
         <section class="projetos">
