--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <a href="#" class="activate">Home</a>
-            <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage">Contato</a>
+            <!-- <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage">Contato</a> -->
             <a href="https://www.linkedin.com/in/otavio-santiago/">Linkedin</a>
             <a href="https://github.com/Tav1hh">Github</a>
-            <a href="https://www.instagram.com/tavihh/">Instagram</a>
+            <!-- <a href="https://www.instagram.com/tavihh/">Instagram</a> -->
         </nav>
     </header>
     <main>
