--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <section class="about">
             <h2>Developer</h2>
-            <p>Sou um <strong>Desenvolvedor de Software</strong>, adoro aprender novas <strong>Tecnologias e Linguagens</strong>, até o momento trabalhei apenas em projetos pessoais, estou ansioso pelo meu primeiro trabalho na area, para finalmente conseguir entrar no mercado de trabalho.</p>
+            <p>Sou um <strong>Desenvolvedor de Software</strong>, adoro aprender novas Tecnologias e Linguagens, até o momento trabalhei apenas em projetos pessoais, estou ansioso pelo meu primeiro trabalho na area, para finalmente conseguir entrar no mercado de trabalho.</p>
         </section>
         <section class="projetos">
             <h1>Projetos</h1>
