--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <a href="#" class="activate">Home</a>
             <!-- <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage">Contato</a> -->
-            <a href="https://www.linkedin.com/in/otavio-santiago/">Linkedin</a>
-            <a href="https://github.com/Tav1hh">Github</a>
+            <a href="https://www.linkedin.com/in/otavio-santiago/" target="_blank">Linkedin</a>
+            <a href="https://github.com/Tav1hh" target="_blank">Github</a>
             <!-- <a href="https://www.instagram.com/tavihh/">Instagram</a> -->
         </nav>
     </header>
@@ -49,22 +49,22 @@
                 <div>
                     <h2>Sax Club</h2>
                     <div><img src="imagens/sax-club.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/SaxClub/" class="acess" target="_blank">Acessar</a>
+                    <a href="https://tav1hh.github.io/Site-SaxClub/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Login/Cadastro</h2>
                     <div><img src="imagens/login-registrar.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Login-Registrar/" class="acess" target="_blank">Acessar</a>
+                    <a href="https://tav1hh.github.io/Site-LoginRegistrar/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Hora do Dia</h2>
                     <div><img src="imagens/hora-dia.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Hora-Dia/" class="acess" target="_blank">Acessar</a>
+                    <a href="https://tav1hh.github.io/Site-HoraDia/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Verificador Idade</h2>
                     <div><img src="imagens/indetificador-idade.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Verificador-Idade/" class="acess" target="_blank">Acessar</a>
+                    <a href="https://tav1hh.github.io/Site-VerificadorIdade/" class="acess" target="_blank">Acessar</a>
                 </div>
             </div>
     </section>
@@ -72,10 +72,10 @@
     <footer>
         <p>&copy;2024 Otávio Santiago</p>
         <article>
-            <a href="https://www.instagram.com/tavihh/"><img id="icon-instagram" src="imagens/instagram.png" onmouseenter="setImage('icon-instagram','instagram')" onmouseout="resetImage('icon-instagram','instagram')" ></a>
-            <a href="https://www.linkedin.com/in/otavio-santiago/"><img id="icon-linkedin" src="imagens/linkedin.png" onmouseenter="setImage('icon-linkedin','linkedin')" onmouseout="resetImage('icon-linkedin','linkedin')"></a>
-            <a href="https://github.com/Tav1hh"><img id="icon-github" src="imagens/github.png" onmouseenter="setImage('icon-github','github')" onmouseout="resetImage('icon-github','github')"></a>
-            <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage"><img id="icon-whatsapp" src="imagens/whatsapp.png" onmouseenter="setImage('icon-whatsapp','whatsapp')" onmouseout="resetImage('icon-whatsapp','whatsapp')"></a>
+            <a href="https://www.instagram.com/tavihh/" target="_blank"><img id="icon-instagram" src="imagens/instagram.png" onmouseenter="setImage('icon-instagram','instagram')" onmouseout="resetImage('icon-instagram','instagram')" ></a>
+            <a href="https://www.linkedin.com/in/otavio-santiago/" target="_blank"><img id="icon-linkedin" src="imagens/linkedin.png" onmouseenter="setImage('icon-linkedin','linkedin')" onmouseout="resetImage('icon-linkedin','linkedin')"></a>
+            <a href="https://github.com/Tav1hh" target="_blank"><img id="icon-github" src="imagens/github.png" onmouseenter="setImage('icon-github','github')" onmouseout="resetImage('icon-github','github')"></a>
+            <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage" target="_blank"><img id="icon-whatsapp" src="imagens/whatsapp.png" onmouseenter="setImage('icon-whatsapp','whatsapp')" onmouseout="resetImage('icon-whatsapp','whatsapp')"></a>
         </article>
     </footer>
 </body>
