--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </div>
                 <div>
                     <h2>Sax Club</h2>
-                    <div><img src="imagens/sax-club.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Site-SaxClub/" class="acess" target="_blank">Acessar</a>
+                    <div><img src="imagens/trinados.png" alt="" onclick="redirectToLink(this)"></div>
+                    <a href="https://tav1hh.github.io/Site-Trinados" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Login/Cadastro</h2>
