--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="https://tav1hh.github.io/Site-BotDiscord/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
-                    <h2>Sax Club</h2>
+                    <h2>Trinados</h2>
                     <div><img src="imagens/trinados.png" alt="" onclick="redirectToLink(this)"></div>
                     <a href="https://tav1hh.github.io/Site-Trinados" class="acess" target="_blank">Acessar</a>
                 </div>
