Arrumei os links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <script src="scripts/scripts.js"></script>
-    <link rel="stylesheet" href="estilos/style.css">
+    <script src="public/js/scripts.js"></script>
+    <link rel="stylesheet" href="public//css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#" class="activate">Home</a>
-            <!-- <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage">Contato</a> -->
+            <!-- <a href="#" class="activate">Home</a> -->
+            <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage">Contato</a>
             <a href="https://www.linkedin.com/in/otavio-santiago/" target="_blank">Linkedin</a>
             <a href="https://github.com/Tav1hh" target="_blank">Github</a>
             <!-- <a href="https://www.instagram.com/tavihh/">Instagram</a> -->
@@ -43,28 +43,28 @@
             <div class="carrosel">
                 <div>
                     <h2>Bot Discord</h2>
-                    <div><img src="imagens/bot-discord.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Site-BotDiscord/" class="acess" target="_blank">Acessar</a>
+                    <div><img src="public/img/bot-discord.png" alt="" onclick="redirectToLink(this)"></div>
+                    <a href="https://tavihh.github.io/Repositorio-Projetos/Sites/Site-BotDiscord/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Trinados</h2>
-                    <div><img src="imagens/trinados.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Site-Trinados" class="acess" target="_blank">Acessar</a>
+                    <div><img src="public/img/trinados.png" alt="" onclick="redirectToLink(this)"></div>
+                    <a href="http://147.93.68.67:1010" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Login/Cadastro</h2>
-                    <div><img src="imagens/login-registrar.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Site-LoginRegistrar/" class="acess" target="_blank">Acessar</a>
+                    <div><img src="public/img/login-registrar.png" alt="" onclick="redirectToLink(this)"></div>
+                    <a href="https://tavihh.github.io/Repositorio-Projetos/Sites/Site-LoginRegistrar/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Hora do Dia</h2>
-                    <div><img src="imagens/hora-dia.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Site-HoraDia/" class="acess" target="_blank">Acessar</a>
+                    <div><img src="public/img/hora-dia.png" alt="" onclick="redirectToLink(this)"></div>
+                    <a href="https://tavihh.github.io/Repositorio-Projetos/Sites/Site-HoraDia/" class="acess" target="_blank">Acessar</a>
                 </div>
                 <div>
                     <h2>Verificador Idade</h2>
-                    <div><img src="imagens/indetificador-idade.png" alt="" onclick="redirectToLink(this)"></div>
-                    <a href="https://tav1hh.github.io/Site-VerificadorIdade/" class="acess" target="_blank">Acessar</a>
+                    <div><img src="public/img/indetificador-idade.png" alt="" onclick="redirectToLink(this)"></div>
+                    <a href="https://tavihh.github.io/Repositorio-Projetos/Sites/Site-VerificadorIdade/" class="acess" target="_blank">Acessar</a>
                 </div>
             </div>
     </section>
@@ -72,10 +72,10 @@
     <footer>
         <p>&copy;2024 Otávio Santiago</p>
         <article>
-            <a href="https://www.instagram.com/tavihh/" target="_blank"><img id="icon-instagram" src="imagens/instagram.png" onmouseenter="setImage('icon-instagram','instagram')" onmouseout="resetImage('icon-instagram','instagram')" ></a>
-            <a href="https://www.linkedin.com/in/otavio-santiago/" target="_blank"><img id="icon-linkedin" src="imagens/linkedin.png" onmouseenter="setImage('icon-linkedin','linkedin')" onmouseout="resetImage('icon-linkedin','linkedin')"></a>
-            <a href="https://github.com/Tav1hh" target="_blank"><img id="icon-github" src="imagens/github.png" onmouseenter="setImage('icon-github','github')" onmouseout="resetImage('icon-github','github')"></a>
-            <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage" target="_blank"><img id="icon-whatsapp" src="imagens/whatsapp.png" onmouseenter="setImage('icon-whatsapp','whatsapp')" onmouseout="resetImage('icon-whatsapp','whatsapp')"></a>
+            <a href="https://www.instagram.com/tavihh/" target="_blank"><img id="icon-instagram" src="public/img/instagram.png" onmouseenter="setImage('icon-instagram','instagram')" onmouseout="resetImage('icon-instagram','instagram')" ></a>
+            <a href="https://www.linkedin.com/in/otavio-santiago/" target="_blank"><img id="icon-linkedin" src="public/img/linkedin.png" onmouseenter="setImage('icon-linkedin','linkedin')" onmouseout="resetImage('icon-linkedin','linkedin')"></a>
+            <a href="https://github.com/Tav1hh" target="_blank"><img id="icon-github" src="public/img/github.png" onmouseenter="setImage('icon-github','github')" onmouseout="resetImage('icon-github','github')"></a>
+            <a href="https://api.whatsapp.com/send?phone=5562992749698&text=Gostaria%20de%20fazer%20um%20or%C3%A7amento%20para%20a%20cria%C3%A7%C3%A3o%20de%20um%20site/landpage" target="_blank"><img id="icon-whatsapp" src="public/img/whatsapp.png" onmouseenter="setImage('icon-whatsapp','whatsapp')" onmouseout="resetImage('icon-whatsapp','whatsapp')"></a>
         </article>
     </footer>
 </body>
